some more styles to the rescue

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,8 +3,9 @@
  */
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,300,700,200,600);
 
-$primary-font: 'Open Sans', sans-serif;
+$primary-font: 'Titillium Web', sans-serif;
 $primary-color: #ff6200; // light orange
 $secondary-color: #5E792C; // desaturated green
 
