--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container vertical-spacing">
   <div class="row">
     <div id="why">
       <div class="horizontal-tabs-wrapper">
